--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@
 # » twitter.com/kjkGustavo
 
 # » AUTH INFO
-PREFIX_SERVER=
-AUTH_TOKEN=
+PREFIX_SERVER=>>
+AUTH_TOKEN=NjUzMTczMTM0ODA3MTM4MzE2.XxAlrw.qBuea3oNxgA8I4_-QfPXpyaRwvQ
 MOTD=
 
 # » GROUP ID
