--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 
 # » AUTH INFO
 PREFIX_SERVER=>>
-AUTH_TOKEN=NjUzMTczMTM0ODA3MTM4MzE2.XxAlrw.qBuea3oNxgA8I4_-QfPXpyaRwvQ
+AUTH_TOKEN=
 MOTD=
 
 # » GROUP ID
